[package]
name = "clashup-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.53"
log = "0.4.14"
reqwest = { version = "0.11", features = ["blocking"] }
serde_yaml = "0.8.13"